Add web camera focus control
